tests: refactored get optional test